slurm-1256.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperparameters_Test_file.py", line 129
    neurons = [50:200]
                 ^
SyntaxError: invalid syntax
